--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <meta charset="utf-8">
     <meta http-equiv="Content-type" content="text/html; charset=utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    
+    <meta property="og:image" content="https://eagle-ma.github.io/images/logo/51334926_322056495094555_8310400214657662976_n.jpg">
+    
     <style type="text/css">
     body {
         background-color: #f0f0f2;
