--- a/index.html
+++ b/index.html
@@ -53,7 +53,9 @@
 
 
 <center><div><h4>Site is underconstruction.</h4>
-<h3>Coming Soon!</h3>  
+<h3>Coming Soon!</h3> 
+    <p>info@ema.mk</p>
+    <p class="btn-success "><a href="tel:+38977522555" class="btn btn-primary">+389 (77) 522-555 </a></p>
 </div></center>
 
 </body></html>
