--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                         <li class="dropdown">
                             <a href="#"><img src="media/sq.gif" alt="lang">SQ</a>
                             <ul>
-                                <li><a href="#"><img src="media/mk.gif" alt="lang">MK</a></li>
+                                <li><a href="index-mk.html"><img src="media/mk.gif" alt="lang">MK</a></li>
                                 <li><a href="index-3.html"><img src="media/en.gif" alt="lang">EN</a></li>
                             </ul>
                         </li>
