--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
         </div>
     </nav>
     <main>
-        <section class="section-image light ken-burn-center" data-parallax="scroll" data-image-src="media/hd-12.jpg">
+        <section class="section-image light ken-burn-center" data-parallax="scroll" data-image-src="https://ema.mk/media/hd-12.jpg">
             <div class="container">
 
                 <div class="row justify-content-around">
