--- a/contacts-en.html
+++ b/contacts-en.html
@@ -109,7 +109,7 @@
 
 <input type="hidden" name="_subject" value="EMA">
 <input type="hidden" name="_captcha" value="false">
-<input type="hidden" name="_next" value="https://gridart.github.io/thankyou.html">
+<input type="hidden" name="_next" value="https://ema.mk/thankyou.html">
 
                         </form>
                     </div>
