--- a/index.html
+++ b/index.html
@@ -6,7 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title> EMA | EAGLE Mountain Association</title>
     <meta name="EMA | EAGLE Mountain Association" content="The association is a non-governmental organization, non-political, non-religious non-profit specialized in the field of studies, scientific publications and recognition of nature, protection of the Albanian mountain environment, mountain climbing, mountaineering, rock climbing, mountain sports, mountain sports, and develops its activity in accordance with the Albanian legislation as well as with the provisions of the Statute.">
-
+    
+	<meta property="og:url" content="https://ema.mk/index.html/">
+	<meta property="og:site_name" content="EMA | EAGLE Mountain Association">
+	<meta property="og:image" content="https://ema.mk/images/logo/Ema-Logo959x727.png">	
+	
     <link rel="stylesheet" href="assets/css/bootstrap-grid.css">
     <link rel="stylesheet" href="assets/css/style.css">
     <link rel="stylesheet" href="assets/css/glide.css">
