--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@
                             <li><b>Phone</b><hr><p>+389 (77) 522-555</p></li>
                             <li><b>Anëtarët e ekipit</b><hr><p>25+</p></li>
                             <li><b>Shtigje të udhëtimeve</b><hr><p>15+</p></li>
-                            <li><b>Themelues</b><hr><p>Servet Adili</p></li>
+                            <li><b>Themelues</b><hr><p>Servet Dauti</p></li>
                         </ul> 
                     </div>
                 </div>
@@ -238,7 +238,7 @@
                                 </div>
                             </div>
                             <div class="inverted">
-                                <div class="badge"><center><p>2017</p></center><center><span>Shoqata</span></center></div>
+                                <div class="badge"><center><p>2019</p></center><center><span>Shoqata</span></center></div>
                                 <div class="panel">
                                     <h3 class="timeline-title">........... Anëtarësimi në shoqatën e vendit</h3>
 
