--- a/index-mk.html
+++ b/index-mk.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="mk">
 <head>
     <meta charset="utf-8">
@@ -233,7 +233,7 @@
                                 </div>
                             </div>
                             <div class="inverted">
-                                <div class="badge"><center><p>2017</p></center><center><span>Здружението</span></center></div>
+                                <div class="badge"><center><p>2019</p></center><center><span>Здружението</span></center></div>
                                 <div class="panel">
                                     <h3 class="timeline-title">........... Членство во здружението на земјата</h3>
 
