--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
         </div>
     </nav>
     <main>
-        <section class="section-image light ken-burn-center" data-parallax="scroll" data-image-src="assets/media/cover/hd-12.jpg">
+        <section class="section-image light ken-burn-center" data-parallax="scroll" data-image-src="https://ema.mk/images/logo/hd-12.jpg">
             <div class="container">
 
                 <div class="row justify-content-around">
