--- a/contacts-mk.html
+++ b/contacts-mk.html
@@ -71,7 +71,7 @@
         <section class="section-base">
             <div class="container">
 		<center>
-<img src="https://ema.mk/images/logo/Ema-Logo959x727.png" width="60%" height="70%"> 
+<img src="https://ema.mk/images/logo/Ema-Logo959x727.png" width="550px" height="100%"> 
 		</center>
                 			<hr>
                 <div class="row">
