--- a/contacts-en.html
+++ b/contacts-en.html
@@ -77,7 +77,7 @@
         <section class="section-base">
             <div class="container">
 		<center>
-<img src="https://ema.mk/images/logo/Ema-Logo959x727.png" width="60%" height="70%"> 
+<img src="https://ema.mk/images/logo/Ema-Logo959x727.png" width="550" height="100%"> 
 		</center>
                 			<hr>
                 <div class="row">
