--- a/index-en.html
+++ b/index-en.html
@@ -68,12 +68,12 @@
         </div>
     </nav>
     <main>
-        <section class="section-image light ken-burn-center" data-parallax="scroll" data-image-src="assets/media/cover/hd-12.jpg">
+        <section class="section-image light ken-burn-center" data-parallax="scroll" data-image-src="https://raw.githubusercontent.com/eagle-ma/eagle-ma.github.io/main/images/logo/hd-12.jpg">
             <div class="container">
 
                 <div class="row justify-content-around">
                     <div class="col-lg-6">
-                        <img src="https://ema.mk/images/logo/Ema-Logo959x727.png" alt="">
+                        <img src="https://ema.mk/images/logo/Ema-Logo959x727.png" class="width-415">
 
                         
                     </div>
