--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     
 
 	<meta property="og:site_name" content="EMA | EAGLE Mountain Association">
-	<meta property="og:image" content="https://ema.mk/images/logo/Ema-Logo959x727.png">	
+	<meta property="og:image" content="images/logo/Ema-Logo959x727.webp">	
 	
     <link rel="stylesheet" href="assets/css/bootstrap-grid.css">
     <link rel="stylesheet" href="assets/css/style.css">
