--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
         </div>
     </nav>
     <main>
-        <section class="section-image light ken-burn-center" data-parallax="scroll" data-image-src="https://raw.githubusercontent.com/eagle-ma/eagle-ma.github.io/main/images/logo/hd-12.jpg">
+        <section class="section-image light ken-burn-center" data-parallax="scroll" data-image-src="https://raw.githubusercontent.com/eagle-ma/eagle-ma.github.io/main/images/logo/hd-12.webp">
             <div class="container">
 
                 <div class="row justify-content-around">
