--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 
 
                     <li>
-                        <a href="#about">Ne</a>
+                        <a href="#about">Rreth Nesh</a>
                     </li>
 
 
