--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
             <div class="menu-brand">
                 <a href="#">
                     
-                    <img class="logo-default scroll-show" src="https://raw.githubusercontent.com/eagle-ma/eagle-ma.github.io/main/images/logo/EMA-Logo960x874.webp" alt="logo" style="max-height: 158px; height: 119px;">
-                    <img class="logo-retina scroll-show" src="https://raw.githubusercontent.com/eagle-ma/eagle-ma.github.io/main/images/logo/EMA-Logo960x874.webp" alt="logo" style="max-height: 158px; height: 119px;">
+                    <img class="logo-default scroll-show" src="https://ema.mk/images/logo/EMA-Logo960x874.png" alt="logo" style="max-height: 158px; height: 119px;">
+                    <img class="logo-retina scroll-show" src="https://ema.mk/images/logo/EMA-Logo960x874.png" alt="logo" style="max-height: 158px; height: 119px;">
                 </a>
             </div>
             <i class="menu-btn"></i>
@@ -78,7 +78,7 @@
 
                 <div class="row justify-content-around">
                     <div class="col-lg-6">
-                        <img class="width-415" src="https://raw.githubusercontent.com/eagle-ma/eagle-ma.github.io/main/images/logo/Ema-Logo959x727.webp" alt="">
+                        <img class="width-415" src="https://ema.mk/images/logo/Ema-Logo959x727.png" alt="EMA logo">
 
                         
                     </div>
