--- a/index-mk.html
+++ b/index-mk.html
@@ -1613,8 +1613,8 @@
         </div>
         <div class="footer-bar">
             <div class="container">
-                <span>EMA - EAGLE Mountain Association <a href="contacts.html" target="_blank">©</a></span>
-                <span><a href="contacts-sq.html">Contact us</a> | <a href="#">EMA</a></span>
+                <span>EMA - EAGLE Mountain Association <a href="contacts-mk.html" target="_blank">©</a></span>
+                <span><a href="contacts-mk.html">Contact us</a> | <a href="#">EMA</a></span>
             </div>
         </div>
         <link rel="stylesheet" href="assets/media/icons/iconsmind/line-icons.min.css">
