--- a/index-mk.html
+++ b/index-mk.html
@@ -114,7 +114,7 @@
                         <p>
                             Сакате повеќе информации за други патувања или сакате да резервирате специјална екскурзија?
                         </p>
-                        <a href="contacts.html" class="btn btn-xs">Контактирајте не</a>
+                        <a href="contacts-mk.html" class="btn btn-xs">Контактирајте не</a>
                     </div>
                 </div>
                 <ul class="slider" data-options="type:carousel,arrows:true,perView:4,perViewMd:3,perViewSm:2,perViewXs:1,gap:30,controls:out,autoplay:3000">
