--- a/contacts-mk.html
+++ b/contacts-mk.html
@@ -159,7 +159,7 @@
         </div>
         <div class="footer-bar">
             <div class="container">
-                <span>EMA - EAGLE Mountain Association <a href="contacts.html" target="_blank">©</a></span>
+                <span>EMA - EAGLE Mountain Association <a href="contacts-mk.html" target="_blank">©</a></span>
                 <span><a href="contacts-mk.html">Contact us</a> | <a href="#">EMA</a></span>
             </div>
         </div>
