--- a/index-en.html
+++ b/index-en.html
@@ -59,7 +59,7 @@
                             <a href="#"><img src="assets/media/icons/en.gif" alt="lang">EN</a>
                             <ul>
                                 <li><a href="index.html"><img src="assets/media/icons/sq.gif" alt="lang">SQ</a></li>
-                                <li><a href="index-en.html"><img src="assets/media/icons/mk.gif" alt="lang">MK</a></li>
+                                <li><a href="index-mk.html"><img src="assets/media/icons/mk.gif" alt="lang">MK</a></li>
                             </ul>
                         </li>
                     </ul>
@@ -114,7 +114,7 @@
                         <p>
                             Would you like more info about other trips or you want to book a special excursion?
                         </p>
-                        <a href="contacts.html" class="btn btn-xs">Contact us</a>
+                        <a href="contacts-en.html" class="btn btn-xs">Contact us</a>
                     </div>
                 </div>
                 <ul class="slider" data-options="type:carousel,arrows:true,perView:4,perViewMd:3,perViewSm:2,perViewXs:1,gap:30,controls:out,autoplay:3000">
@@ -1614,8 +1614,8 @@
         </div>
         <div class="footer-bar">
             <div class="container">
-                <span>EMA - EAGLE Mountain Association <a href="contacts.html" target="_blank">©</a></span>
-                <span><a href="contacts-sq.html">Contact us</a> | <a href="#">EMA</a></span>
+                <span>EMA - EAGLE Mountain Association <a href="contacts-en.html" target="_blank">©</a></span>
+                <span><a href="contacts-en.html">Contact us</a> | <a href="#">EMA</a></span>
             </div>
         </div>
         <link rel="stylesheet" href="assets/media/icons/iconsmind/line-icons.min.css">
