--- a/index-mk.html
+++ b/index-mk.html
@@ -73,7 +73,7 @@
 
                 <div class="row justify-content-around">
                     <div class="col-lg-6">
-                        <img class="width-415" src="https://ema.mk/images/logo/Ema-Logo959x727.png" alt="">
+                        <img class="width-415" src="https://ema.mk/images/logo/Ema-Logo959x727.webp" alt="">
 
                         
                     </div>
