--- a/index-en.html
+++ b/index-en.html
@@ -1614,7 +1614,8 @@
         </div>
         <div class="footer-bar">
             <div class="container">
-                <span>EMA - EAGLE Mountain Association <a href="contacts-en.html" target="_blank">©</a></span>
+		<a href="index-en.html" target="_blank">©</a>    
+                <span>EMA - EAGLE Mountain Association</span>
                 <span><a href="contacts-en.html">Contact us</a> | <a href="#">EMA</a></span>
             </div>
         </div>
