--- a/index.html
+++ b/index.html
@@ -1592,28 +1592,29 @@
     <footer class="light">
         <div class="container">
             <div class="row">
+                <div class="col-lg-4"><h3>EAGLE Mountain Association</h3><hr><p>Diku midis fundit të ngjitjes së majave është përgjigja e misterit pse ngjitemi.</p></div>
+		<div class="col-lg-4"><img src="https://ema.mk/images/logo/Ema-Logo959x727.png" width="550" height="100%"></div>
                 <div class="col-lg-4">
-                    <h3>EAGLE Mountain Association</h3>
-			<hr>
-                    <p>Diku midis fundit të ngjitjes së majave është përgjigja e misterit pse ngjitemi.</p>
-                </div>
-                <div class="col-lg-4">
-                    <h3>Contacts</h3>
-			<hr>
-                    <ul class="icon-list icon-line">
+                    <h3>Contacts</h3><hr><ul class="icon-list icon-line">
                         <li>Tetovo, North Macedonia</li>
                         <li>info@ema.mk</li>
                         <li>+389 (77) 522-555</li>
-                    </ul>
+                    			 </ul>
                 </div>
-                <div class="col-lg-4">
-                    <div class="icon-links icon-social icon-links-grid social-colors">
-                        <a class="facebook"><i class="icon-facebook"></i></a>
-                        <a class="instagram"><i class="icon-instagram"></i></a>
-                    </div>
-                    <hr class="space-sm">
-                    <p>Na ndiqni në kanalet sociale për të qëndruar të akorduar.</p>
-                </div>
+		<div class="col-lg-4">
+                    <h3>Contacts</h3><hr><ul class="icon-list icon-line">
+                        <li>Tetovo, North Macedonia</li>
+                        <li>info@ema.mk</li>
+                        <li>+389 (77) 522-555</li>
+                   			 </ul>
+<hr class="space-sm">
+<div class="icon-links icon-social icon-links-grid social-colors-hover">
+<a href="https://www.facebook.com/SHARMOUNT/" class="facebook">
+<br>
+<i class="icon-facebook"></i></a>
+ <a href="https://www.facebook.com/SHARMOUNT/" class="instagram"><i class="icon-instagram"></i></a>
+</div>
+		</div>
             </div>
         </div>
         <div class="footer-bar">
