--- a/index-mk.html
+++ b/index-mk.html
@@ -1584,42 +1584,36 @@
 
 
     </main>
-    <footer class="light">
+<footer class="light">
         <div class="container">
             <div class="row">
-                <div class="col-lg-4">
-                    <h3>EAGLE Mountain Association</h3>
-			<hr>
-                    <p>Некаде помеѓу крајот на искачувањето на врвовите е одговорот на мистеријата зошто се искачуваме.</p>
-                </div>
-                <div class="col-lg-4">
-                    <h3>Контакти</h3>
-			<hr>
-                    <ul class="icon-list icon-line">
+                <div class="col-lg-4"><h3>EAGLE Mountain Association</h3><hr><p>Некаде помеѓу крајот на искачувањето на врвовите е одговорот на мистеријата зошто се искачуваме.</p></div>
+		<div class="col-lg-4"><img src="https://ema.mk/images/logo/Ema-Logo959x727.png" width="550" height="100%"></div>
+		<div class="col-lg-4">
+                    <h3>Contacts</h3><hr><ul class="icon-list icon-line">
                         <li>Tetovo, North Macedonia</li>
                         <li>info@ema.mk</li>
                         <li>+389 (77) 522-555</li>
-                    </ul>
-                </div>
-                <div class="col-lg-4">
-                    <div class="icon-links icon-social icon-links-grid social-colors">
-                        <a class="facebook"><i class="icon-facebook"></i></a>
-                        <a class="instagram"><i class="icon-instagram"></i></a>
-                    </div>
-                    <hr class="space-sm">
-                    <p>Follow us on the social channels to stay tuned.</p>
-                </div>
+                   			 </ul>
+<hr class="space-sm">
+<div class="icon-links icon-social icon-links-grid social-colors-hover">
+<a href="https://www.facebook.com/SHARMOUNT/" class="facebook">
+<br>
+<i class="icon-facebook"></i></a>
+ <a href="https://www.facebook.com/SHARMOUNT/" class="instagram"><i class="icon-instagram"></i></a>
+</div>
+		</div>
             </div>
         </div>
         <div class="footer-bar">
             <div class="container">
-                <span>EMA - EAGLE Mountain Association <a href="contacts-mk.html" target="_blank">©</a></span>
-                <span><a href="contacts-mk.html">Contact us</a> | <a href="#">EMA</a></span>
+                <span>EMA - EAGLE Mountain Association <a href="contacts.html" target="_blank">©</a></span>
+                <span><a href="contacts.html">Contact us</a> | <a href="#">EMA</a></span>
             </div>
         </div>
         <link rel="stylesheet" href="assets/media/icons/iconsmind/line-icons.min.css">
     	<script src="assets/scripts/jquery.min.js"></script>
-  	<script src="assets/scripts/main.js"></script>
+    	<script src="assets/scripts/main.js"></script>
         <script src="assets/scripts/parallax.min.js"></script>
         <script src="assets/scripts/glide.min.js"></script>
         <script src="assets/scripts/progress.js"></script>
