--- a/index-en.html
+++ b/index-en.html
@@ -1613,7 +1613,44 @@
             </div>
         </div>
         <link rel="stylesheet" href="assets/media/icons/iconsmind/line-icons.min.css">
+	<footer class="light">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-4"><h3>EAGLE Mountain Association</h3><hr><p>Somewhere between the bottom of the climb and the summit is the answer to the mystery why we climb.</p></div>
+		<div class="col-lg-4"><img src="https://ema.mk/images/logo/Ema-Logo959x727.png" width="550" height="100%"></div>
+		<div class="col-lg-4">
+                    <h3>Contacts</h3><hr><ul class="icon-list icon-line">
+                        <li>Tetovo, North Macedonia</li>
+                        <li>info@ema.mk</li>
+                        <li>+389 (77) 522-555</li>
+                   			 </ul>
+<hr class="space-sm">
+<div class="icon-links icon-social icon-links-grid social-colors-hover">
+<a href="https://www.facebook.com/SHARMOUNT/" class="facebook">
+<br>
+<i class="icon-facebook"></i></a>
+ <a href="https://www.facebook.com/SHARMOUNT/" class="instagram"><i class="icon-instagram"></i></a>
+</div>
+		</div>
+            </div>
+        </div>
+        <div class="footer-bar">
+            <div class="container">
+                <span>EMA - EAGLE Mountain Association <a href="contacts.html" target="_blank">©</a></span>
+                <span><a href="contacts.html">Contact us</a> | <a href="#">EMA</a></span>
+            </div>
+        </div>
+        <link rel="stylesheet" href="assets/media/icons/iconsmind/line-icons.min.css">
+    	<script src="assets/scripts/jquery.min.js"></script>
+    	<script src="assets/scripts/main.js"></script>
+        <script src="assets/scripts/parallax.min.js"></script>
+        <script src="assets/scripts/glide.min.js"></script>
+        <script src="assets/scripts/progress.js"></script>
+        <script src="assets/scripts/magnific-popup.min.js"></script>
+        <script src="assets/scripts/pagination.min.js"></script>
+        <script src="assets/scripts/social.min.js"></script>
 
+    </footer>
 	</footer>
 </body>
 </html>
