--- a/index-en.html
+++ b/index-en.html
@@ -50,7 +50,7 @@
                         <a href="#gallery">Gallery</a>
                     </li>
                     <li>
-                        <a href="contacts-en.html">Contacts</a>
+                        <a href="#">Contacts</a>
                     </li>
                 </ul>
                 <div class="menu-right">
