--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                         <a href="#gallery">Galerija</a>
                     </li>
                     <li>
-                        <a href="contacts.html">Kontak</a>
+                        <a href="#">Kontak</a>
                     </li>
                 </ul>
                 <div class="menu-right">
@@ -119,7 +119,7 @@
                         <p>
                             Dëshironi më shumë informacion rreth udhëtimeve të tjera apo dëshironi të rezervoni një ekskursion të veçantë?
                         </p>
-                        <a href="contacts.html" class="btn btn-xs">Na kontaktoni</a>
+                        <a href="#" class="btn btn-xs">Na kontaktoni</a>
                     </div>
                 </div>
                 <ul class="slider" data-options="type:carousel,arrows:true,perView:4,perViewMd:3,perViewSm:2,perViewXs:1,gap:30,controls:out,autoplay:3000">
