--- a/index-en.html
+++ b/index-en.html
@@ -1589,7 +1589,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-4"><h3>EAGLE Mountain Association</h3><hr><p>Somewhere between the bottom of the climb and the summit is the answer to the mystery why we climb.</p></div>
-		<div class="col-lg-4"><img src="https://ema.mk/images/logo/Ema-Logo959x727.png" width="550" height="100%"></div>
+		<div class="col-lg-4"><img src="https://ema.mk/images/logo/Ema-Logo959x727.webp" width="550" height="100%"></div>
 		<div class="col-lg-4">
                     <h3>Contacts</h3><hr><ul class="icon-list icon-line">
                         <li>Tetovo, North Macedonia</li>
