--- a/index-mk.html
+++ b/index-mk.html
@@ -1588,7 +1588,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-4"><h3>EAGLE Mountain Association</h3><hr><p>Некаде помеѓу крајот на искачувањето на врвовите е одговорот на мистеријата зошто се искачуваме.</p></div>
-		<div class="col-lg-4"><img src="https://ema.mk/images/logo/Ema-Logo959x727.png" width="550" height="100%"></div>
+		<div class="col-lg-4"><img src="https://ema.mk/images/logo/Ema-Logo959x727.webp" width="550" height="100%"></div>
 		<div class="col-lg-4">
                     <h3>Contacts</h3><hr><ul class="icon-list icon-line">
                         <li>Tetovo, North Macedonia</li>
