--- a/index-en.html
+++ b/index-en.html
@@ -24,8 +24,7 @@
             <div class="menu-brand">
                 <a href="#">
                     
-                    <img class="logo-default scroll-show" src="https://ema.mk/images/logo/EMA-Logo960x874.png" alt="logo" style="max-height: 158px; height: 119px;">
-                    <img class="logo-retina scroll-show" src="https://ema.mk/images/logo/EMA-Logo960x874.png" alt="logo" style="max-height: 158px; height: 119px;">
+                    <img class="logo-default scroll-show" src="https://raw.githubusercontent.com/eagle-ma/ema/main/EMA-Logo960x874.png" alt="ema - logo" style="max-height: 158px; height: 119px;">
                 </a>
             </div>
             <i class="menu-btn"></i>
@@ -73,7 +72,7 @@
 
                 <div class="row justify-content-around">
                     <div class="col-lg-6">
-                        <img src="https://ema.mk/images/logo/Ema-Logo959x727.png" class="width-415">
+                        <img src="https://raw.githubusercontent.com/eagle-ma/ema/main/Ema-Logo789x727.png" class="width-415">
 
                         
                     </div>
@@ -1589,7 +1588,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-4"><h3>EAGLE Mountain Association</h3><hr><p>Somewhere between the bottom of the climb and the summit is the answer to the mystery why we climb.</p></div>
-		<div class="col-lg-4"><img src="https://ema.mk/images/logo/Ema-Logo959x727.webp" width="550" height="100%"></div>
+		<div class="col-lg-4"><img src="https://raw.githubusercontent.com/eagle-ma/ema/main/Ema-Logo789x727.png" width="550" height="100%"></div>
 		<div class="col-lg-4">
                     <h3>Contacts</h3><hr><ul class="icon-list icon-line">
                         <li>Tetovo, North Macedonia</li>
