--- a/index.html
+++ b/index.html
@@ -28,8 +28,7 @@
             <div class="menu-brand">
                 <a href="#">
                     
-                    <img class="logo-default scroll-show" src="https://ema.mk/images/logo/EMA-Logo960x874.png" alt="logo" style="max-height: 158px; height: 119px;">
-                    <img class="logo-retina scroll-show" src="https://ema.mk/images/logo/EMA-Logo960x874.png" alt="logo" style="max-height: 158px; height: 119px;">
+                    <img class="logo-default scroll-show" src="https://raw.githubusercontent.com/eagle-ma/ema/main/EMA-Logo960x874.png" alt="logo" style="max-height: 158px; height: 119px;">
                 </a>
             </div>
             <i class="menu-btn"></i>
@@ -78,7 +77,7 @@
 
                 <div class="row justify-content-around">
                     <div class="col-lg-6">
-                        <img class="width-415" src="https://ema.mk/images/logo/Ema-Logo959x727.png" alt="EMA logo">
+                        <img class="width-415" src="https://raw.githubusercontent.com/eagle-ma/ema/main/Ema-Logo789x727.png" alt="EMA logo">
 
                         
                     </div>
@@ -1593,7 +1592,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-4"><h3>EAGLE Mountain Association</h3><hr><p>Diku midis fundit të ngjitjes së majave është përgjigja e misterit pse ngjitemi.</p></div>
-		<div class="col-lg-4"><img src="https://ema.mk/images/logo/Ema-Logo959x727.png" width="550" height="100%"></div>
+		<div class="col-lg-4"><img src="https://raw.githubusercontent.com/eagle-ma/ema/main/Ema-Logo789x727.png" width="550" height="100%"></div>
 		<div class="col-lg-4">
                     <h3>Contacts</h3><hr><ul class="icon-list icon-line">
                         <li>Tetovo, North Macedonia</li>
