--- a/index.html
+++ b/index.html
@@ -124,61 +124,61 @@
                 <ul class="slider" data-options="type:carousel,arrows:true,perView:4,perViewMd:3,perViewSm:2,perViewXs:1,gap:30,controls:out,autoplay:3000">
                     <li>
                         <a class="img-box btn-video lightbox img-box-caption" href="assets/media/video/1.mp4" data-lightbox-anima="fade-left">
-                            <img src="assets/media/video/thumbnails/1.jpg" alt="">
+                            <img src="../assets/media/video/thumbnails/1.jpg" alt="">
                             <span>1</span>
                         </a>
                     </li>
                     <li>
                         <a class="img-box btn-video lightbox img-box-caption" href="assets/media/video/2.mp4" data-lightbox-anima="fade-left">
-                            <img src="assets/media/video/thumbnails/2.jpg" alt="">
+                            <img src="../assets/media/video/thumbnails/2.jpg" alt="">
                             <span>2</span>
                         </a>
                     </li>
                     <li>
                         <a class="img-box btn-video lightbox img-box-caption" href="assets/media/video/3.mp4" data-lightbox-anima="fade-left">
-                            <img src="assets/media/video/thumbnails/3.jpg" alt="">
+                            <img src="../assets/media/video/thumbnails/3.jpg" alt="">
                             <span>3</span>
                         </a>
                     </li>
                     <li>
                         <a class="img-box btn-video lightbox img-box-caption" href="assets/media/video/4.mp4" data-lightbox-anima="fade-left">
-                            <img src="assets/media/video/thumbnails/4.jpg" alt="">
+                            <img src="../assets/media/video/thumbnails/4.jpg" alt="">
                             <span>4</span>
                         </a>
                     </li>
                     <li>
                         <a class="img-box btn-video lightbox img-box-caption" href="assets/media/video/5.mp4" data-lightbox-anima="fade-left">
-                            <img src="assets/media/video/thumbnails/5.jpg" alt="">
+                            <img src="../assets/media/video/thumbnails/5.jpg" alt="">
                             <span>5</span>
                         </a>
                     </li>
                     <li>
                         <a class="img-box btn-video lightbox img-box-caption" href="assets/media/video/6.mp4" data-lightbox-anima="fade-left">
-                            <img src="assets/media/video/thumbnails/6.jpg" alt="">
+                            <img src="../assets/media/video/thumbnails/6.jpg" alt="">
                             <span>6</span>
                         </a>
                     </li>
                     <li>
                         <a class="img-box btn-video lightbox img-box-caption" href="assets/media/video/7.mp4" data-lightbox-anima="fade-left">
-                            <img src="assets/media/video/thumbnails/7.jpg" alt="">
+                            <img src="../assets/media/video/thumbnails/7.jpg" alt="">
                             <span>7</span>
                         </a>
                     </li>
                     <li>
                         <a class="img-box btn-video lightbox img-box-caption" href="assets/media/video/8.mp4" data-lightbox-anima="fade-left">
-                            <img src="assets/media/video/thumbnails/8.jpg" alt="">
+                            <img src="../assets/media/video/thumbnails/8.jpg" alt="">
                             <span>8</span>
                         </a>
                     </li>
                     <li>
                         <a class="img-box btn-video lightbox img-box-caption" href="assets/media/video/9.mp4" data-lightbox-anima="fade-left">
-                            <img src="assets/media/video/thumbnails/9.jpg" alt="">
+                            <img src="../assets/media/video/thumbnails/9.jpg" alt="">
                             <span>9</span>
                         </a>
                     </li>
                     <li>
                         <a class="img-box btn-video lightbox img-box-caption" href="assets/media/video/10.mp4" data-lightbox-anima="fade-left">
-                            <img src="assets/media/video/thumbnails/10.jpg" alt="">
+                            <img src="../assets/media/video/thumbnails/10.jpg" alt="">
                             <span>10</span>
                         </a>
                     </li>
@@ -377,7 +377,7 @@
                     <div class="album-list">   
                         <div class="album-box">
                             <a href="#" class="img-box img-scale">
-                                <img src="assets/media/gallery/treks-thumbnail.jpg" alt="">
+                                <img src="../assets/media/gallery/treks-thumbnail.jpg" alt="">
                             </a>
                             <div class="caption">
                                 <h3>Udhëtime</h3>
@@ -385,7 +385,7 @@
                         </div>
                         <div class="album-box">
                             <a href="#" class="img-box img-scale">
-                                <img src="assets/media/gallery/sight-thumbnail.jpg" alt="">
+                                <img src="../assets/media/gallery/sight-thumbnail.jpg" alt="">
                             </a>
                             <div class="caption">
                                 <h3>Pamje</h3>
@@ -393,7 +393,7 @@
                         </div>
                         <div class="album-box">
                             <a href="#" class="img-box img-scale">
-                                <img src="assets/media/gallery/nature-waterfalls-thumbnail.jpg" alt="">
+                                <img src="../assets/media/gallery/nature-waterfalls-thumbnail.jpg" alt="">
                             </a>
                             <div class="caption">
                                 <h3>Natyra & Ujëvara</h3>
@@ -401,7 +401,7 @@
                         </div>
                         <div class="album-box">
                             <a href="#" class="img-box img-scale">
-                                <img src="assets/media/gallery/voluntary-work-thumbnail.jpg" alt="">
+                                <img src="../assets/media/gallery/voluntary-work-thumbnail.jpg" alt="">
                             </a>
                             <div class="caption">
                                 <h3>Punë vullnetare</h3>
@@ -409,7 +409,7 @@
                         </div>
                         <div class="album-box">
                             <a href="#" class="img-box img-scale">
-                                <img src="assets/media/gallery/team-thumbnail.jpg" alt="">
+                                <img src="../assets/media/gallery/team-thumbnail.jpg" alt="">
                             </a>
                             <div class="caption">
                                 <h3>Skuadra</h3>
@@ -417,7 +417,7 @@
                         </div>
                         <div class="album-box">
                             <a href="#" class="img-box img-scale">
-                                <img src="assets/media/gallery/lunches-thumbnail.jpg" alt="">
+                                <img src="../assets/media/gallery/lunches-thumbnail.jpg" alt="">
                             </a>
                             <div class="caption">
                                 <h3>Ushqime</h3>
