--- a/index-en.html
+++ b/index-en.html
@@ -113,7 +113,7 @@
                         <p>
                             Would you like more info about other trips or you want to book a special excursion?
                         </p>
-                        <a href="contacts-en.html" class="btn btn-xs">Contact us</a>
+                        <a href="#" class="btn btn-xs">Contact us</a>
                     </div>
                 </div>
                 <ul class="slider" data-options="type:carousel,arrows:true,perView:4,perViewMd:3,perViewSm:2,perViewXs:1,gap:30,controls:out,autoplay:3000">
@@ -1608,7 +1608,7 @@
         <div class="footer-bar">
             <div class="container">
                 <span>EMA - EAGLE Mountain Association <a href="contacts.html" target="_blank">©</a></span>
-                <span><a href="contacts.html">Contact us</a> | <a href="#">EMA</a></span>
+                <span><a href="#">Contact us</a> | <a href="#">EMA</a></span>
             </div>
         </div>
         <link rel="stylesheet" href="assets/media/icons/iconsmind/line-icons.min.css">
