--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                         <br>
 <center>
 	<div class="">
-<a href="/al"><img src="../images/al.png" height="auto" width="75"></a>
+<a href="/sq"><img src="../images/al.png" height="auto" width="75"></a>
 <a href="/mk"><img src="../images/mk.png" height="auto" width="75"></a>
 <a href="/en"><img src="../images/en.png" height="auto" width="75"></a>
 	</div>
