--- a/index.html
+++ b/index.html
@@ -27,13 +27,14 @@
         <section class="section-image light ken-burn-center" data-parallax="scroll" data-image-src="https://raw.githubusercontent.com/eagle-ma/eagle-ma.github.io/main/images/logo/hd-12.jpg">
             <div class="container">
 
-                <div class="row justify-content-around">
+                <div class="justify-content-around">
                     <img class="width-415" src="https://raw.githubusercontent.com/eagle-ma/ema/main/Ema-Logo789x727.png" alt="EMA logo">
-                    
                 </div>
-                <div class="row justify-content-around">
-                    <center><h3>Select a Language
-            </h3></center>
+                <div class="justify-content-around">
+			<br>
+                    <center>
+			    <h3>Select a Language</h3>
+		    </center>
 
 <div class="caption">               
 <br>
