--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <div class="container">
 
                 <div class="justify-content-around">
-                    <img class="width-415" src="https://raw.githubusercontent.com/eagle-ma/ema/main/Ema-Logo789x727.png" alt="EMA logo">
+                    <center><img class="width-415" src="https://raw.githubusercontent.com/eagle-ma/ema/main/Ema-Logo789x727.png" alt="EMA logo"></center>
                 </div>
                 <div class="justify-content-around">
 			<br>
