--- a/index.html
+++ b/index.html
@@ -23,6 +23,11 @@
 </head>
 <body class="page-main">
     <div id="preloader"></div>
+	
+	  <!--start loading fb sdk-->
+	  <div id="fb-root"></div>
+<script async defer src="https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v3.2"></script>
+	  <!--end loading fb sdk-->
 <main>
         <section class="section-image light ken-burn-center" data-parallax="scroll" data-image-src="https://raw.githubusercontent.com/eagle-ma/eagle-ma.github.io/main/images/logo/hd-12.jpg">
             <div class="container">
